apply config to day and night mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">TestCase</string>
-
+    <string name="home">خانه</string>
+    <string name="balance">موجودی</string>
+    <string name="manage_financial">مدیریت مالی</string>
+    <string name="box">باکس</string>
+    <string name="increase_credit">شارژ حساب</string>
 </resources>
